services bug, fixed with z-index

--- a/styles/components/servicesCarousel.scss
+++ b/styles/components/servicesCarousel.scss
@@ -57,6 +57,7 @@
 
       &.is-active {
         opacity: 1;
+        z-index: 10;
       }
   
       .column:nth-child(1) {
